Update styling, assets

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
-    <title>Julia Beard</title>
-    <meta name="description" content="Julia Beard">
+    <title>Julia</title>
+    <meta name="description" content="Julia">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
 
     <div id="main">
-      Julia Beard
+      Julia
     </div>
 
   </body>
